Fixing Time Entry details not wrapping in fields like Comments or Work Accomplished

--- a/Content/tm2.css
+++ b/Content/tm2.css
@@ -8,8 +8,12 @@ a, a:link {
     padding: 0;
 }
 
-table {
+*:first-child {
     margin-top: 0;
+}
+
+table {
+    margin-top: 1em;
 }
 
 table.hasHeader {
@@ -59,6 +63,7 @@ table.small {
 
 table.stemleaf td:last-child {
     max-width: 300px;
+	white-space: normal;
 }
 
 table.border {
@@ -164,7 +169,7 @@ input[readonly="readonly"] {
     float: right;
     background: #ddd;
     border: 5px solid #ccc;
-    padding: 0 20px;
+    padding: 10px 20px;
 }
 
 div.logo {
@@ -252,4 +257,8 @@ header select#selected_course {
         padding-left: 30px;
         padding-right: 30px;
     }
+}
+
+footer {
+    padding: 10px;
 }
